# FoldGL

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/pdb/: atom.cpp  atom.hpp  chain.cpp  chain.hpp  common.cpp  common.hpp  model.cpp  model.hpp  pdb.hpp  residue.cpp  residue.hpp  secondary_structure.cpp  secondary_structure.hpp
src/physics/: unfold.cpp  unfold.hpp
src/renderer/: camera.cpp  camera.hpp  mesh.cpp  mesh.hpp
src/shader/: mesh.frag  mesh.vert
